
 * Updated ibrowse library to 2.1.2 fixing numerous replication issues.
 * Make sure that the replicator respects HTTP settings defined in the config.
 * Fix error when the ibrowse connection closes unexpectedly.
 * Fix authenticated replication (with HTTP basic auth) of design documents
   with attachments.
 * Various fixes to make replication more resilient for edge-cases.

View Server:

 * Don't trigger view updates when requesting `_design/doc/_info`.
 * Fix for circular references in CommonJS requires.
 * Made isArray() function available to functions executed in the query server.
 * Documents are now sealed before being passed to map functions.
 * Force view compaction failure when duplicated document data exists. When
   this error is seen in the logs users should rebuild their views from
   scratch to fix the issue. See COUCHDB-999 for details.

Version 1.0.1
-------------

Storage System:

  * Fix data corruption bug COUCHDB-844. Please see
    http://couchdb.apache.org/notice/1.0.1.html for details.

Replicator:

  * Added support for replication via an HTTP/HTTPS proxy.
  * Fix pull replication of attachments from 0.11 to 1.0.x.
  * Make the _changes feed work with non-integer seqnums.

HTTP Interface:

  * Expose `committed_update_seq` for monitoring purposes.
  * Show fields saved along with _deleted=true. Allows for auditing of deletes.
  * More robust Accept-header detection.

Authentication:

  * Enable basic-auth popup when required to access the server, to prevent
    people from getting locked out.

Futon:

  * User interface element for querying stale (cached) views.

Build and System Integration:

  * Included additional source files for distribution.

Version 1.0.0
-------------

Security:

 * Added authentication caching, to avoid repeated opening and closing of the
   users database for each request requiring authentication.

Storage System:

 * Small optimization for reordering result lists.
 * More efficient header commits.